--- a/index.html
+++ b/index.html
@@ -36,13 +36,17 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-light navbar-light py-3">
+      <nav class="navbar bg-body-tertiary navbar-expand-lg bg-light navbar-light py-3">
         <div class="container">
-          <img
-            src="./assets/img/CREEDWHITE.png"
-            class="w-10 img-fluid d-none d-sm-block"
-            alt="logo-creed"
-          />
+          <a class="navbar-brand" href="./index.html">
+            <img
+              src="../assets/img/CREEDWHITE.png"
+              class="w-10 img-fluid d-none d-sm-block"
+              alt="logo-creed"
+              width="90"
+              height="84"
+            />
+          </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -56,11 +60,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a
-                  class="nav-link mx-2 active"
-                  aria-current="page"
-                  href="./index.html"
+              <li class="nav-item mx-2">
+                <a class="nav-link" aria-current="page" href="./index.html"
                   >Inicio</a
                 >
               </li>
@@ -70,18 +71,19 @@
                 >
               </li>
               <li class="nav-item mx-2">
-                <a class="nav-link" href="./pages/quienesSomos.html"
-                  >Quienes Somos?</a
+                <a class="nav-link" href="./pages/nosotros.html"
+                  >Nosotros</a
                 >
               </li>
               <li class="nav-item mx-2">
                 <a class="nav-link" href="./pages/galeria.html">Galeria</a>
               </li>
               <li class="nav-item mx-2">
-                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                <a class="nav-link active" href="./pages/contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
+  
         </div>
       </nav>
     </header>
