--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -36,13 +36,17 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-light navbar-light py-3">
+      <nav class="navbar bg-body-tertiary navbar-expand-lg bg-light navbar-light py-3">
         <div class="container">
-          <img
-            src="../assets/img/CREEDWHITE.png"
-            class="w-10 img-fluid d-none d-sm-block"
-            alt="logo-creed"
-          />
+          <a class="navbar-brand" href="../index.html">
+            <img
+              src="../assets/img/CREEDWHITE.png"
+              class="w-10 img-fluid d-none d-sm-block"
+              alt="logo-creed"
+              width="90"
+              height="84"
+            />
+          </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -57,19 +61,18 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item mx-2">
-                <a
-                  class="nav-link"
-                  aria-current="page"
-                  href="../index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Inicio</a
                 >
               </li>
               <li class="nav-item mx-2">
-                <a class="nav-link active" href="./actividades.html">Actividades</a>
+                <a class="nav-link active" href="./actividades.html"
+                  >Actividades</a
+                >
               </li>
               <li class="nav-item mx-2">
-                <a class="nav-link" href="./quienesSomos.html"
-                  >Quienes Somos?</a
+                <a class="nav-link" href="./nosotros.html"
+                  >Nosotros</a
                 >
               </li>
               <li class="nav-item mx-2">
@@ -80,6 +83,7 @@
               </li>
             </ul>
           </div>
+
         </div>
       </nav>
     </header>
@@ -184,7 +188,7 @@
       Aprendo y creo todos los dias.<br />
     </p>
     <div
-      class="iconos-redes-sociales d-flex flex-wrap aling-items-center justify-content-center"
+      class="iconos-redes-sociales d-flex flex-wrap aling-items-center justify-content-between"
     >
       <a
         href="https://twitter.com/freecodecampES"
