--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -28,23 +28,44 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-light navbar-light py-3">
+    <nav class="navbar bg-body-tertiary navbar-expand-lg bg-light navbar-light py-3">
       <div class="container">
-        <img src="../assets/img/CREEDWHITE.png" class="w-10 img-fluid d-none d-sm-block" alt="logo-creed" />
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="../index.html">
+          <img
+            src="../assets/img/CREEDWHITE.png"
+            class="w-10 img-fluid d-none d-sm-block"
+            alt="logo-creed"
+            width="90"
+            height="84"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item mx-2">
-              <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link" aria-current="page" href="../index.html"
+                >Inicio</a
+              >
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" href="./actividades.html">Actividades</a>
+              <a class="nav-link" href="./actividades.html"
+                >Actividades</a
+              >
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" href="./quienesSomos.html">Quienes Somos?</a>
+              <a class="nav-link" href="./nosotros.html"
+                >Nosotros</a
+              >
             </li>
             <li class="nav-item mx-2">
               <a class="nav-link active" href="./galeria.html">Galeria</a>
@@ -54,6 +75,7 @@
             </li>
           </ul>
         </div>
+
       </div>
     </nav>
   </header>
