--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="descripcion" 
+    <meta
+      name="descripcion"
       content="gimnasio con guia de entrenamientos en todos los ambientes para sacar el maximo potencial"
     />
-    <meta name="keyboards" content="gimnasio boxeo crossfit argentina buenos aires la plata"/>
+    <meta
+      name="keyboards"
+      content="gimnasio boxeo crossfit argentina buenos aires la plata"
+    />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -16,7 +20,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    
+
     <link rel="stylesheet" href="../assets/scss/style.css" />
     <!-- Icon Boostrap -->
 
@@ -32,17 +36,21 @@
       rel="stylesheet"
     />
     <!-- Title -->
-    <title>Creed Quienes somos?</title>
+    <title>Creed Nosotros</title>
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-light navbar-light py-3">
+      <nav class="navbar bg-body-tertiary navbar-expand-lg bg-light navbar-light py-3">
         <div class="container">
-          <img
-            src="../assets/img/CREEDWHITE.png"
-            class="w-10 img-fluid d-none d-sm-block"
-            alt="logo-creed"
-          />
+          <a class="navbar-brand" href="../index.html">
+            <img
+              src="../assets/img/CREEDWHITE.png"
+              class="w-10 img-fluid d-none d-sm-block"
+              alt="logo-creed"
+              width="90"
+              height="84"
+            />
+          </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -57,10 +65,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item mx-2">
-                <a
-                  class="nav-link "
-                  aria-current="page"
-                  href="../index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Inicio</a
                 >
               </li>
@@ -70,8 +75,8 @@
                 >
               </li>
               <li class="nav-item mx-2">
-                <a class="nav-link active" href="./quienesSomos.html"
-                  >Quienes Somos?</a
+                <a class="nav-link active" href="./nosotros.html"
+                  >Nosotros</a
                 >
               </li>
               <li class="nav-item mx-2">
@@ -82,59 +87,60 @@
               </li>
             </ul>
           </div>
+
         </div>
       </nav>
     </header>
 
-    <!-- Section Quienes Somos?-->
+    <!-- Section Nosotros-->
     <section class="quienes-somos seccion-oscura">
-        <div class="container">
-          <h2 class="seccion-titulo">QUIENES SOMOS</h2>
-          <p class="text-large">
-            Somos una cadena de gimnasios, con un concepto premium, que encabeza
-            una rama de servicios especializada en el equipamiento e instalación
-            de gimnasios premium en barrios cerrados, clubes de campo,
-            countries, edificios y condominios.
-          </p>
-          <p class="text-large">
-            Somos una cadena de gimnasios, con un concepto premium, que encabeza
-            una rama de servicios especializada en el equipamiento e instalación
-            de gimnasios premium en barrios cerrados, clubes de campo,
-            countries, edificios y condominios.
-          </p>
+      <div class="container">
+        <h2 class="seccion-titulo">QUIENES SOMOS</h2>
+        <p class="text-large">
+          Somos una cadena de gimnasios, con un concepto premium, que encabeza
+          una rama de servicios especializada en el equipamiento e instalación
+          de gimnasios premium en barrios cerrados, clubes de campo, countries,
+          edificios y condominios.
+        </p>
+        <p class="text-large">
+          Somos una cadena de gimnasios, con un concepto premium, que encabeza
+          una rama de servicios especializada en el equipamiento e instalación
+          de gimnasios premium en barrios cerrados, clubes de campo, countries,
+          edificios y condominios.
+        </p>
 
-          <h6 class="alt-font" style="margin-bottom: 15px">
-            <strong>¿Qué es lo que hacemos?</strong>
-          </h6>
-          <p class="text-large">
-            Sabemos de la necesidad de los propietarios de poseer un gimnasio de
-            calidad, completo y funcional, a metros de su vivienda. Hoy, Creed
-            Home &amp; Corporate tu gimnasio premium es una realidad. <br />
-            <br />
-            Te brindamos asesoramiento técnico por profesionales para el
-            equipamiento e instalación en cuanto a qué maquinaria, cuantas y
-            cómo aprovechar mejor el espacio. <br /><br />
-            Instalamos el gimnasio premium y lo dejamos listo para disfrutar de
-            un entrenamiento de calidad. Una vez instalado, nos hacemos cargo
-            del mantenimiento de las maquinarias, sin que tengas que preocuparte
-            por absolutamente nada. Tu gimnasio, a metros de tu casa, en manos
-            de profesionales.
-          </p>
+        <h6 class="alt-font" style="margin-bottom: 15px">
+          <strong>¿Qué es lo que hacemos?</strong>
+        </h6>
+        <p class="text-large">
+          Sabemos de la necesidad de los propietarios de poseer un gimnasio de
+          calidad, completo y funcional, a metros de su vivienda. Hoy, Creed
+          Home &amp; Corporate tu gimnasio premium es una realidad. <br />
+          <br />
+          Te brindamos asesoramiento técnico por profesionales para el
+          equipamiento e instalación en cuanto a qué maquinaria, cuantas y cómo
+          aprovechar mejor el espacio. <br /><br />
+          Instalamos el gimnasio premium y lo dejamos listo para disfrutar de un
+          entrenamiento de calidad. Una vez instalado, nos hacemos cargo del
+          mantenimiento de las maquinarias, sin que tengas que preocuparte por
+          absolutamente nada. Tu gimnasio, a metros de tu casa, en manos de
+          profesionales.
+        </p>
 
-          <h6 class="alt-font" style="margin-bottom: 15px">
-            <strong>¿Por qué lo que hacemos?</strong>
-          </h6>
-          <p class="text-large">
-            Lo hacemos porque nuestro principal objetivo es ayudarte. Lo hacemos
-            con pasión, dedicación y entusiasmo. Sabemos lo que el deporte
-            representa para vos y por eso tus necesidades son lo mas importante
-            para nosotros. Disponemos de un equipo de profesionales %100
-            dispuestos a solucionar tus problemas. Queremos lo mejor para vos, y
-            lo mejor está a tu alcance. <br /><br />
-            Contamos con dos modalidades de contratación para su conveniencia:
-            <br />
-          </p>
-        </div>
+        <h6 class="alt-font" style="margin-bottom: 15px">
+          <strong>¿Por qué lo que hacemos?</strong>
+        </h6>
+        <p class="text-large">
+          Lo hacemos porque nuestro principal objetivo es ayudarte. Lo hacemos
+          con pasión, dedicación y entusiasmo. Sabemos lo que el deporte
+          representa para vos y por eso tus necesidades son lo mas importante
+          para nosotros. Disponemos de un equipo de profesionales %100
+          dispuestos a solucionar tus problemas. Queremos lo mejor para vos, y
+          lo mejor está a tu alcance. <br /><br />
+          Contamos con dos modalidades de contratación para su conveniencia:
+          <br />
+        </p>
+      </div>
     </section>
 
     <!-- Footer -->
@@ -145,7 +151,7 @@
       <img
         class="footer-logo"
         src="../assets/img/CREEDWHITE.png"
-        alt="logo de quienes somos? en el footer"
+        alt="logo de Nosotros en el footer"
       />
       <p class="footer-texto text-center">
         Aprendo y creo todos los dias.<br />
